# sightline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  build_win_installer.iss  config_manager.py  deface.spec  deface_cli_entry.py  dialogs.py  face_smudge.py  gui_run_deface.py  icon.icns  main.py  pyi_rth_tkinter.py  pyi_rth_tqdm.py  pyi_rth_transformers.py  pyproject.toml  requirements.txt  sightline-brand-guide.html  sightline.spec  sightline_theme.json
.github/workflows/: ci.yml  release.yml
docs/: index.html  style.css
flaticons/license/: license.html
scripts/: check-deps.sh  pyinstaller-without-conda.sh  sign-app.sh
tests/: test_main.py
views/: __init__.py  base_view.py  batch_processing_view.py  face_blur_view.py  generic_batch_view.py  home_view.py  transcription_view.py
views/dialogs/: __init__.py  config_dialog.py  info_dialog.py  log_dialog.py  manage_models_dialog.py
